# wasm_rust_image_viewer

./: Cargo.toml  README.md  canvas_page.js  canvas_page_bg.wasm  compile  index.js
src/: context.rs  lib.rs
src/modules/: buffer.rs  frame.rs  mod.rs  pixel.rs
www/: canvas.html  canvas_page.js  canvas_page_bg.wasm  index.js
